--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:launchMode="singleInstance"
+        android:launchMode="singleTop"
         android:theme="@android:style/Theme.DeviceDefault" >
         <activity
             android:name=".MyActivity"
