--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
         android:launchMode="singleTop"
         android:theme="@android:style/Theme.DeviceDefault" >
@@ -20,10 +20,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".NotificationActvity"
-            android:label="@string/title_activity_notification_actvity" >
         </activity>
     </application>
 
