--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rachel.tabatatimer" >
+    package="com.rachel.tabatawear" >
 
     <uses-feature android:name="android.hardware.type.watch" />
 
@@ -13,7 +13,7 @@
         android:launchMode="singleTop"
         android:theme="@android:style/Theme.DeviceDefault" >
         <activity
-            android:name=".MyActivity"
+            android:name="com.rachel.tabatawear.MyActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
