--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:label="@string/app_name"
         android:launchMode="singleTop"
         android:theme="@android:style/Theme.DeviceDefault" >
+
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.rachel.tabatawear.MyActivity"
             android:label="@string/app_name" >
@@ -21,6 +23,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".DataLayerListenerService"
+           >
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
     </application>
+
 
 </manifest>
