--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -7,10 +7,11 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
+
         android:allowBackup="true"
         android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
-        android:launchMode="singleTop"
+        android:launchMode="singleInstance"
         android:theme="@android:style/Theme.DeviceDefault" >
 
         <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
